sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
import scala.util.control._

def bubbleSort3() {
	val loop = new Breaks;
	loop.breakable{
	for (i <- getNombreValeurs()-2 to 0 by -1) {
		var inverse = true;
		if (inverse) {
			inverse = false;
			for (j <- 0 to i) {
				if (plusPetit(j+1,j)) {
					echange(j+1,j);
					inverse = true;
				}
			}	
		}
		else {
			loop.break;
		}
	}
}
